fixed spacing

--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -40,24 +39,31 @@ h1 {
   font-weight: 10;
 }
 .card {
-  padding: 2em;
+  padding: 1rem 2rem;
   border: 1px solid #ccc;
 }
 
 .note {
   padding: 0;
 }
-.btn {
+
+.remove {
   display: none;
 }
 
-.note:hover > .btn{
+.remove:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.note:hover > .remove {
   display:block;
 }
 
 input[type="text"] {
   color: #333;
   background-color: #ffffff;
+  border: 0;
 }
 
 li {
@@ -74,7 +80,7 @@ li {
 }
 
 .counter {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #b0b0b0;
   text-align: start;
 }
